# capyCRYPT

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs  benchmark_aes.rs  benchmark_e222_224.rs  benchmark_e222_256.rs  benchmark_e222_384.rs  benchmark_e222_512.rs  benchmark_e382_224.rs  benchmark_e382_256.rs  benchmark_e382_512.rs  benchmark_e448_224.rs  benchmark_e448_256.rs  benchmark_e448_384.rs  benchmark_e448_512.rs  benchmark_e512_224.rs  benchmark_e512_256.rs  benchmark_e512_384.rs  benchmark_e521_512.rs  benchmark_sha3.rs
src/: controller.rs  curve.rs  curves.rs  lib.rs  macros.rs  main.rs  model.rs  ops.rs  twisted_projective.rs
src/aes/: aes_constants.rs  aes_encryptable.rs  aes_functions.rs  aes_modes.rs  encryptable.rs
src/curve/: affine.rs  e521.rs  edwards.rs  extended_edwards.rs  extensible_edwards.rs  projective_niels.rs  twisted_edwards.rs
src/curve/field/: field_element.rs  lookup_table.rs  scalar.rs
src/ecc/: ecc_encryptable.rs  ecc_keypair.rs  ecc_signable.rs  encryptable.rs  keypair.rs  mod.rs  signable.rs
src/kem/: encryptable.rs  kem_encryptable.rs  keypair.rs
src/mlkem/: kem_encryptable.rs  mod.rs
src/sha3/: aux_functions.rs  c_shake.rs  constants.rs  encryptable.rs  hashable.rs  keccakf.rs  sha3_encryptable.rs  sha3_hashable.rs  shake_functions.rs  sponge.rs  sponge_encryptable.rs
src/view/: window.rs
tests/: aes_tests.rs  e222_tests.rs  e382_tests.rs  e448_tests.rs  e521_tests.rs  integration_tests.rs  message_tests.rs  model_test.rs  model_tests.rs  ops_tests.rs  sponge_tests.rs
