[package]
name = "capycrypt"
version = "0.6.5"
edition = "2021"

license = "MIT"
keywords = ["aes", "sha3", "elliptic-curve", "ed448", "schnorr"]
readme = "README.md"
authors = ["Dustin Ray (Dr. Capybara) <dustinray313@gmail.com>", "Hunter Richardson (HLRichardson-Git) <hunter@hunterrichardson.net>"]
description = "An academic exercise in cryptographic algorithm design, pairing NIST FIPS 202 with a variety of Edwards curves."
repository = "https://github.com/drcapybara/capyCRYPT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = {version = "0.4.0"}
hex = {version = "0.4.3"}
byteorder = {version = "1.4.3"}
chrono = {version = "0.4.23"}
criterion = "0.3"
crypto-bigint = {version = "0.5.3", features = ["serde", "alloc"]}
fiat-crypto = "0.2.2"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
tiny_ed448_goldilocks = { version = "0.1.8"}
aes = "0.8.3"
rayon = "1.5"
structopt = "0.3"
serde = { version = "1.0", features = ["alloc", "derive"] }
serde_json = "1.0"
tempfile = "3.2"
capy_kem = "0.1.7"

[[bench]]
name = "benchmark_sha3"
harness = false

[[bench]]
name = "benchmark_e448_224"
harness = false

[[bench]]
name = "benchmark_e448_512"
harness = false

[[bench]]
name = "benchmark_aes"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.test] 
opt-level = 3
